# alice

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/: Makefile  changelog.rst  conf.py  environment.rst  index.rst  installation.rst  macro_api.rst  modes.rst  store_api.rst  tutorial1.rst  tutorial2.rst  tutorial3.rst  tutorial4.rst  tutorials.rst
examples/: CMakeLists.txt  demo.cpp
examples/tutorial1/: tutorial1.cpp
examples/tutorial2/: tutorial2.cpp
examples/tutorial3/: tutorial3.cpp
examples/tutorial4/: tutorial4.cpp
examples/tutorial5/: tutorial5.cpp
include/: CMakeLists.txt
include/alice/: alice.hpp  api.hpp  cli.hpp  command.hpp  logging.hpp  readline.hpp  rules.hpp  store.hpp  store_api.hpp  validators.hpp
include/alice/commands/: alias.hpp  convert.hpp  current.hpp  help.hpp  print.hpp  ps.hpp  quit.hpp  read_io.hpp  set.hpp  show.hpp  store.hpp  write_io.hpp
include/alice/detail/: logging.hpp  python.hpp  utils.hpp
lib/: CMakeLists.txt
lib/cli11/: CLI11.hpp
test/: CMakeLists.txt  command.cpp  json.cpp  store.cpp  types.cpp
tools/: AliceTools.cmake
